# truepresence

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/admin/: app.js  index.html  styles.css
apps/api/app/: __init__.py  dependencies.py  main.py  models.py  repository.py  runtime_paths.py  security.py  service.py
apps/api/app/api/: __init__.py
apps/api/app/api/routes/: attendance.py  enrollment.py  operations.py
apps/api/tests/: test_api.py
apps/ios/MobileAttendanceDemo.xcodeproj/: project.pbxproj
apps/ios/MobileAttendanceDemo.xcodeproj/xcshareddata/xcschemes/: MobileAttendanceDemo.xcscheme
apps/ios/MobileAttendanceDemo/App/: AppModel.swift  MobileAttendanceApp.swift
apps/ios/MobileAttendanceDemo/Models/: Contracts.swift
apps/ios/MobileAttendanceDemo/Services/: AttendanceAPIClient.swift  CameraPermissionService.swift  CameraPreviewStore.swift  CapturePipeline.swift  DeviceTrustService.swift  OfflineQueueStore.swift
apps/ios/MobileAttendanceDemo/Support/: BundledDemoBootstrap.json  Info.plist
apps/ios/MobileAttendanceDemo/Views/: CameraPermissionGateView.swift  CameraPreviewView.swift  CheckInView.swift  DiagnosticsView.swift  HistoryView.swift  RootView.swift
data/demo/: bootstrap.json
docs/: api.md  architecture.md  deployment.md  evaluation.md  operator-sop.md  security-privacy.md
scripts/: public_release_audit.py
(+4 files in other folders)
